# vf-metaproject

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile-pubdoc  QmlDebug.cmake  README.md  ZeraSuperBuild.cmake  qmldebugpath.sh  vein-framework.pri  vein-framework.pro  vf-library.pro  vf-tools.pro
.github/workflows/: build.yml  submodule_pr.yml
api/: api.pro
processing/: processing.pro
storage/: storage.pro
transport/: transport.pro
utils/: utils.pro
